fixed button width issues(i think) on mobile

--- a/style.css
+++ b/style.css
@@ -176,14 +176,22 @@ header {
     .button {
         width: 30%;
     }
+
+    #outcome {
+        font-size: 20px;
+    }
 }
 
 @media screen and (max-width: 450px) {
     #buttons {
-        width: 90%;
+        width: 85%;
     }
 
     .button {
         transform: scale(0.9);
+    }
+
+    #outcome {
+        font-size: 20px;
     }
 }
